Fixing crasher/regression bug 74431 that I caused a few weeks ago.